syntax = "proto3";

package jobstreet.job;

option go_package = "github.com/SEC-Jobstreet/backend-job-service/pb";

message JobListRequest {
    optional string keyword = 1;
	optional string address = 2;
    int32  page_id = 3;
    int32  page_size = 4;
}
